--- a/css/less/param.less
+++ b/css/less/param.less
@@ -1,3 +1,10 @@
 //normal theme
 @inputborder:1px solid gray;
 @inputhoverborder:1px solid blue;
+@inputborderradious:3px;
+@inputpadding:8px 12px;
+//search component
+@searchborder:1px solid gray;
+@searchhoverborder:1px solid gray;
+@searchfocusborder:1px solid black;
+//
