add tag, button, thumnail,and index item to repo

--- a/css/component.css
+++ b/css/component.css
@@ -1,1 +1,193 @@
-*{margin:0;padding:0}html{width:100%;height:auto}@media screen and (min-width:768px){body{font-size:16px}}@media screen and (max-width:768px){body{font-size:12px}}.clearfix:after{content:"";display:block;clear:both}input[type="text"],input[type="password"],textarea{border:1px solid gray;padding:4px 8px;font-size:1rem;border-radius:3px;background:transparent}input[type="text"]:hover,input[type="password"]:hover,textarea:hover{background:white;border:1px solid blue}.co-search{border:1px solid gray;display:inline-block;position:relative;box-sizing:border-box;border-radius:3px}.co-search input{padding:8px 12px;width:100%;height:100%;border:transparent;box-sizing:border-box;font-size:.8rem}.co-search input:hover{border:none;box-shadow:none}.co-search input:active,.co-search input:focus{border:none;box-shadow:none;outline:none}.co-search .search-btn{position:absolute;cursor:pointer;font-size:1.2rem;top:0;right:4px;display:flex;align-items:center;height:100%}/*# sourceMappingURL=./component.css.map */
+* {
+  margin: 0;
+  padding: 0;
+}
+html {
+  width: 100%;
+  height: auto;
+}
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 12px;
+  }
+}
+.clearfix:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+input[type="text"],
+input[type="password"],
+textarea {
+  border: 1px solid gray;
+  padding: 4px 8px;
+  font-size: 1rem;
+  border-radius: 3px;
+  background: transparent;
+}
+input[type="text"]:hover,
+input[type="password"]:hover,
+textarea:hover {
+  background: white;
+  border: 1px solid blue;
+}
+.co-search {
+  border: 1px solid gray;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  border-radius: 3px;
+}
+.co-search input {
+  padding: 8px 12px;
+  width: 100%;
+  height: 100%;
+  border: transparent;
+  box-sizing: border-box;
+  font-size: .8rem;
+}
+.co-search input:hover {
+  border: none;
+  box-shadow: none;
+}
+.co-search input:active,
+.co-search input:focus {
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
+.co-search .search-btn {
+  position: absolute;
+  cursor: pointer;
+  font-size: 1.2rem;
+  top: 0;
+  right: 4px;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+.article-item {
+  display: inline-block;
+}
+@media screen and (min-width: 1280px) {
+  .article-item {
+    width: 25%;
+    margin: 24px;
+  }
+}
+@media screen and (max-width: 1280px) and (min-width: 840px) {
+  .article-item {
+    width: 33.333%;
+    margin: 24px;
+  }
+}
+@media screen and (max-width: 840px) {
+  .article-item {
+    width: 100%;
+    margin: 24px;
+  }
+}
+.article-item .thumnail {
+  width: 100%;
+  padding-bottom: 66.66666%;
+  height: 0;
+}
+.article-item .thumnail img {
+  width: 100%;
+  height: auto;
+}
+.chear-up {
+  cursor: pointer;
+  width: 108px;
+  height: 108px;
+  border-radius: 54px;
+  background: rgba(0, 0, 0, 0.2);
+  color: white;
+  position: relative;
+}
+.chear-up .content-wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 12px;
+  box-sizing: border-box;
+}
+.chear-up .content-wrapper .data,
+.chear-up .content-wrapper .icon {
+  padding: 4px 0;
+}
+.chear-up .content-wrapper .data {
+  font-size: 18px;
+  width: 100%;
+  display: block;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.chear-up .content-wrapper .icon {
+  font-size: 18px;
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+.chear-up .content-wrapper li {
+  display: inline-block;
+  font-size: 36px;
+  text-align: center;
+}
+.fe-tag {
+  display: inline-block;
+  padding: 4px 12px;
+  margin: 4px;
+  font-size: .8rem;
+  border: 1px solid #999;
+  border-radius: 6px;
+  color: #333;
+}
+.be-tag {
+  display: inline-block;
+  padding: 4px 12px;
+  margin: 4px;
+  font-size: .8rem;
+  border: 1px solid #999;
+  border-radius: 6px;
+}
+.be-tag .tag-btn {
+  padding: 4px 0 4px 4px;
+  cursor: pointer;
+}
+.be-tag .tag-btn li {
+  color: #333;
+}
+button,
+.button {
+  display: inline-block;
+  border: none;
+  outline: none;
+  background: purple;
+  color: white;
+  box-shadow: 0 0 0 1px #666;
+  padding: 8px 12px;
+  border-radius: 4px;
+  font-size: 1rem;
+  margin: 12px 24px;
+}
+.login-portrait {
+  width: auto;
+}
+.login-portrait .portrait {
+  display: inline-block;
+  height: 36px;
+  width: 36px;
+  overflow: hidden;
+  border-radius: 18px;
+}
+.login-portrait .portrait img {
+  width: 100%;
+  height: 100%;
+}
