--- a/css/less/param.less
+++ b/css/less/param.less
@@ -7,4 +7,15 @@
 @searchborder:1px solid gray;
 @searchhoverborder:1px solid gray;
 @searchfocusborder:1px solid black;
-//
+//点赞按钮
+@dianzanbg:rgba(0,0,0,.2);
+@dianzanhoverbg:fadeout(black,.8);
+@dianzancolor:white;
+//标签控件
+@tagborder:1px solid #999;
+@tagcolor:#333;
+//普通按钮
+@btnborder:0 0 0 1px #666;
+@btncolor:white;
+@btnbg:purple;
+@btnborderradius:4px;
