--- a/css/less/param.less
+++ b/css/less/param.less
@@ -14,6 +14,7 @@
 //标签控件
 @tagborder:1px solid #999;
 @tagcolor:#333;
+@tagbtnborder:1px solid #555;
 //普通按钮
 @btnborder:0 0 0 1px #666;
 @btncolor:white;
