--- a/css/component.css
+++ b/css/component.css
@@ -123,6 +123,8 @@ textarea:hover {
 .chear-up .content-wrapper .data {
   font-size: 18px;
   width: 100%;
+  padding: 4px 6px;
+  box-sizing: border-box;
   display: block;
   text-align: center;
   text-overflow: ellipsis;
@@ -140,9 +142,33 @@ textarea:hover {
   font-size: 36px;
   text-align: center;
 }
+.srcoll-top {
+  cursor: pointer;
+  width: 108px;
+  height: 108px;
+  border-radius: 54px;
+  background: rgba(0, 0, 0, 0.2);
+  color: white;
+  position: relative;
+}
+.srcoll-top .content-wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 12px;
+  text-align: center;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+.srcoll-top .content-wrapper li {
+  display: block;
+  width: 100%;
+  height: 100%;
+  line-height: 80px;
+  font-size: 56px;
+}
 .fe-tag {
   display: inline-block;
-  padding: 4px 12px;
+  padding: 6px 12px;
   margin: 4px;
   font-size: .8rem;
   border: 1px solid #999;
@@ -151,14 +177,18 @@ textarea:hover {
 }
 .be-tag {
   display: inline-block;
-  padding: 4px 12px;
+  padding: 6px 12px;
   margin: 4px;
   font-size: .8rem;
   border: 1px solid #999;
   border-radius: 6px;
 }
+.be-tag .tag-data {
+  padding: 0 4px;
+}
 .be-tag .tag-btn {
-  padding: 4px 0 4px 4px;
+  padding: 4px 0 4px 8px;
+  border-left: 1px solid #555;
   cursor: pointer;
 }
 .be-tag .tag-btn li {
@@ -176,9 +206,11 @@ button,
   border-radius: 4px;
   font-size: 1rem;
   margin: 12px 24px;
+  cursor: pointer;
 }
 .login-portrait {
   width: auto;
+  display: inline-block;
 }
 .login-portrait .portrait {
   display: inline-block;
@@ -186,8 +218,16 @@ button,
   width: 36px;
   overflow: hidden;
   border-radius: 18px;
+  float: left;
 }
 .login-portrait .portrait img {
   width: 100%;
   height: 100%;
+}
+.login-portrait .username {
+  font-size: .8rem;
+  display: inline-block;
+  line-height: 36px;
+  float: left;
+  padding-left: 12px;
 }
