--- a/css/component.css
+++ b/css/component.css
@@ -199,7 +199,7 @@ button,
   display: inline-block;
   border: none;
   outline: none;
-  background: purple;
+  background: #2196F3;
   color: white;
   box-shadow: 0 0 0 1px #666;
   padding: 8px 12px;
@@ -207,6 +207,35 @@ button,
   font-size: 1rem;
   margin: 12px 24px;
   cursor: pointer;
+}
+.menu-item {
+  width: 81px;
+  height: auto;
+  position: relative;
+  color: white;
+  background: gray;
+  box-sizing: border-box;
+  padding: 6px 0;
+}
+.menu-item .icon {
+  padding: 0 12px;
+  width: auto;
+  font-size: 57px;
+  color: inherit;
+  display: inline-block;
+  text-align: center;
+}
+.menu-item .icon li {
+  display: inline-block;
+}
+.menu-item .data {
+  color: white;
+  width: 100%;
+  position: relative;
+  top: -8px;
+  text-align: center;
+  display: inline-block;
+  font-size: .9rem;
 }
 .login-portrait {
   width: auto;
@@ -230,4 +259,44 @@ button,
   line-height: 36px;
   float: left;
   padding-left: 12px;
+}
+.sys-config-item {
+  width: 20%;
+  height: auto;
+  max-width: 200px;
+  min-width: 150px;
+  border: 1px solid #6d6d6d;
+  box-sizing: border-box;
+  padding: 16px;
+  position: relative;
+  border-radius: 4px;
+  box-shadow: 0 0 3px 3px #efefef;
+}
+.sys-config-item #admin-config {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  font-size: 2.5rem;
+  padding: 4px;
+  text-align: center;
+  box-sizing: border-box;
+  margin: auto;
+}
+.sys-config-item #admin-config li {
+  display: inline-block;
+  color: #2196F3;
+}
+.sys-config-item a.trigger {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;
+  top: 0;
+  left: 0;
+}
+.sys-config-item .data {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  padding: 12px 0;
 }
