--- a/css/less/component.less
+++ b/css/less/component.less
@@ -231,7 +231,33 @@ textarea{
  }
 //首页菜单按钮(后台)
 .menu-item{
-
+    width:81px;
+    height:auto;
+    position: relative;
+    color:@mennucolor;
+    background: @menubg;
+    box-sizing: border-box;
+    padding:6px 0;
+    .icon{
+        padding: 0 12px;
+        width:auto;
+        font-size:57px;
+        color:inherit;
+        display: inline-block;
+        text-align: center;
+        li{
+            display: inline-block;
+        }
+    }
+    .data{
+        color:white;
+        width:100%;
+        position:relative;
+        top:-8px;
+        text-align: center;
+        display: inline-block;
+        font-size: .9rem;
+    }
 }
  //登陆头像
  .login-portrait{
@@ -263,5 +289,50 @@ textarea{
         padding-left: 12px;
     }
  }
- //后台标签
  //系统管理菜单
+.sys-config-item{
+    width:20%;
+    height:auto;
+    max-width:200px;
+    min-width: 150px;
+    border:@sysitemborder;
+    box-sizing: border-box;
+    padding: 16px;
+    position: relative;
+    border-radius: @sysitemborderradius;
+    box-shadow: @sysitemboxshadow;
+    #admin-config{
+        display: inline-block;
+        position: relative;
+        width:100%;
+        font-size: 2.5rem;
+        padding: 4px;
+        text-align: center;
+        box-sizing: border-box;
+        margin:auto;
+        li{
+            display: inline-block;
+            color:@sysitemcolor;
+        }
+    }
+    a.trigger{
+        position: absolute;
+        width:100%;
+        height:100%;
+        display: block;
+        top:0;
+        left:0;
+    }
+    .data{
+        display: inline-block;
+        width:100%;
+        text-align: center;
+        padding: 12px 0;
+    }
+    &:hover{
+
+    }
+    &:active{
+
+    }
+}
