--- a/css/less/param.less
+++ b/css/less/param.less
@@ -71,3 +71,9 @@
 @usernamecolor:#666;
 //当前位置
 @currentloccolor:#666;
+//文章条目
+@articleitemheadfontsize:18px;
+@articleitemheadcolor:#333;
+@articleitemtagfontsize:12px;
+@articleitemtagcolor:#999;
+@articleitemmetadatacolor:#666;
