--- a/css/less/param.less
+++ b/css/less/param.less
@@ -12,7 +12,8 @@
 @searchpadding:6px @searchborderradius;
 @focusstatebg:white;
 @focustatehoverandactive:1px solid #5f7d8c;
-@normalstatebg:#5f7d8c;
+@normalstatebg:rgba(255,255,255,0.2);
+@normalstatecolor:#5f7d8c;
 //回到顶部按钮
 @dianzanbg:rgba(0,0,0,.34);
 @dianzanhoverbg:fadeout(black,.8);
@@ -77,3 +78,13 @@
 @articleitemtagfontsize:12px;
 @articleitemtagcolor:#999;
 @articleitemmetadatacolor:#666;
+
+
+//page body background 
+@bodycolor:#efefef;
+@maincolor:white;
+@mainboxshadow:0 0 1px 3px #efefef;
+@mainfontcolor:#333;
+//header color
+@headcolor:#fff;
+@headbg:#5f7d8c;
