--- a/css/less/page.less
+++ b/css/less/page.less
@@ -1,3 +1,194 @@
-//normal theme
-@inputborder:gray;
-@inputhoverborder:blue;
+//framework
+@import "param.less";
+body{
+    background:@bodycolor;
+}
+.row{
+    width:100%;
+    padding: 12px 0;
+    &:after{
+        content:"";
+        display: block;
+        clear:both;
+    }
+}
+//detail page
+main.detail,main.index{
+    width:100%;
+    max-width:1366px;
+    margin:auto;
+    background:@maincolor;
+    height:auto;
+    color:@mainfontcolor;
+    @media screen and (min-width:1366px){
+        box-shadow:@mainboxshadow;
+    }
+    @media screen and (min-width:768px){
+        .scroll-top{
+            position:fixed;
+            bottom:64px;
+            right:64px;
+        }
+    }
+    @media screen and (max-width:768px){
+        .scroll-top{
+            display: none;
+        }
+    }
+    header{
+        background:@headbg;
+        position:relative;
+        box-sizing: border-box;
+        display: table;
+        vertical-align: center;
+        @media screen and (min-width:768px){
+            width:100%;
+            height:64px;
+            padding: 4px 16px;
+            #search{
+                float:right;
+            }
+            #logo{
+                float:left;
+            }
+
+        }
+        @media screen and (max-width:768px){
+            width:100%;
+            height:48px;
+            padding: 4px 12px;
+        }
+    }
+    #content-wrapper{
+        width:90%;
+        margin:auto;
+        aside{
+            float:left;
+            position: relative;
+        }
+        article{
+            float:right;
+        }
+        @media screen and (min-width:768px){
+            aside{
+                width:30%;
+                padding: 24px;
+                box-sizing: border-box;
+            }
+            article{
+                width:60%;
+                padding: 24px 40px 24px 20px;
+                box-sizing: border-box;
+            }
+        }
+        @media screen and (max-width:768px){
+            aside,article{
+                width:100%;
+            }
+        }
+        article{
+            h2{
+                color:#333;
+                font-size: 32px;
+                font-weight:400;
+                padding: 32px 0;
+                text-align: left;
+            }
+            .tags{
+                float:left;
+            }
+            .publishtime,.viewnumber{
+                float:right;
+                display: inline-block;
+                font-size: 12px;
+                padding: 0 12px;
+                color:#999;
+            }
+            .viewnumber{
+                .data{
+                    padding-left:6px;
+                }
+            }
+            .author{
+                float:left;
+                font-size: 12px;
+                color:#999;
+                .data{
+                    padding-left: 8px;
+                }
+            }
+        }
+        .article-content{
+
+        }
+        .clear-up-section{
+            text-align: center;
+            padding: 24px;
+            .chear-up-btn{
+                display: inline-block;
+            }
+        }
+        .recommands{
+            width:100%;
+            margin:32px 0;
+            h3{
+                padding:24px 0;
+                color:#b0bec5;
+                font-weight:200;
+                font-size: 18px;
+                @media screen and (max-width:768px){
+                    text-align: center;
+                }
+            }
+            ul{
+                width:100%;
+                color:#666;
+                font-size: 12px;
+                li{
+                    padding: 6px 0;
+                    list-style: none;
+                    display: inline-block;
+                    width:100%;
+                    a{
+                        display: inline-block;
+                        text-decoration: none;
+                        float:left;
+                        box-sizing: border-box;
+                        width:80%;
+                        padding: 0 8px 0 0;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        color:inherit;
+                        &:hover{
+                            text-decoration: underline;
+                        }
+                    }
+                    .num{
+                        width:20%;
+                        box-sizing: border-box;
+                        display: inline-block;
+                        float:right;
+                        padding:  0 0 0 8px;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-align: right;
+                    }
+                }
+            }
+        }
+        .ads{
+            padding:12px;
+            .item{
+                width:100%;
+                padding:6px;
+                box-sizing: border-box;
+                img{
+                    width:100%;
+                    height:auto;
+                }
+            }
+        }
+    }
+}
